# harmonics-generator

./: .gitignore  CMakeLists.txt  Cargo.toml  flake.nix
src/: CMakeLists.txt  hello.cpp  main.cpp  main.rs  model.rs  plot.hpp  training.rs
