[package]
name = "harmonics-generator"
description = ""
version = "0.1.0"
license = ""
edition = "2024"

# MSRV
rust-version = "1.85.0"

[features]
default = []
foobar = []

[dependencies]
burn = { version = "~0.18", features = ["std", "tui", "train", "vision", "wgpu", "fusion"], default-features = false }
